--- a/e-commerce/.env
+++ b/e-commerce/.env
@@ -1,1 +1,2 @@
-REACT_APP_CHEC_PUBLIC_KEY = pk_32091f7b1cedc492d519db63d05f90e5ecb547f1d1d96
+REACT_APP_CHEC_PUBLIC_KEY = pk_test_32091a85d0f545e8fc9ace3ed71d95072ed1b347dbc02
+REACT_APP_STRIPE_PUBLIC_KEY= gway_J5avm26mEABElE
